Test/floats/ConstSyntax3.bpl.expect
ConstSyntax3.bpl(12,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(13,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(16,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(18,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(21,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(22,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(25,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(27,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(30,8): error: incorrectly formatted floating point
ConstSyntax3.bpl(31,8): error: incorrectly formatted floating point
10 parse errors detected in ConstSyntax3.bpl